<resources>
    <string name="app_name">BTM Xml Version</string>
    <!-- LoginActivity -->
    <string name="login_text">로그인</string>
    <string name="signup_text">회원가입</string>
    <string name="phone_number_text">전화번호</string>
    <string name="email_text">이메일</string>
    <string name="password_text">패스워드</string>
    <string name="login_logo">뇌훈아</string>
    <!-- SignupActivity -->
    <string name="parent_text">보호자</string>
    <string name="institution_text">기관</string>
    <string name="check_text">확인</string>
    <string name="institution_name_text">시설명</string>
    <string name="representative_name_text">대표자</string>
    <string name="certified_text">인증</string>
    <!-- MainActivity - QuizFragment -->
    <string name="perception_text">지각</string>
    <string name="memory_text">기억</string>
    <string name="intuition_text">직감</string>
    <string name="calculation_text">계산</string>
    <string name="analysis_text">분석</string>
    <!-- MainActivity - BottomNavigation -->
    <string name="dementia_diagnosis_text">치매진단</string>
    <string name="quiz_text">퀴즈</string>
    <string name="my_page_text">내 정보</string>
    <!-- MainActivity - MyPageFragment -->
    <string name="my_profile_text">내 정보</string>
    <string name="health_state_text">건강 상태</string>
    <string name="analysis_graph_text">분석 그래프</string>
    <string name="name_text">이름</string>
    <string name="logout_text">로그아웃</string>
    <string name="interlock_text">연동하기</string>
    <string name="infirm_info_text">노약자 정보</string>
    <string name="make_quiz_text">퀴즈제작</string>
    <string name="interlock_info_text">연동 정보</string>
    <string name="interlock_out_text">연동종료</string>
    <string name="infirm_health_state_text">노약자 건강 상태</string>
    <string name="name_change_text">이름 변경</string>
    <string name="email_change_text">이메일 변경</string>
</resources>