<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/nanum_pen_script_regular"
        android:text="@string/login_logo"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/login_tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/login_tab"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabRippleColor="@null"
        app:tabTextColor="@color/black" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/login_tab_vp"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="@+id/login_tab"
        app:layout_constraintStart_toStartOf="@+id/login_tab"
        app:layout_constraintTop_toBottomOf="@id/login_tab" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tab_vp">

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signup_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>