<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/default_profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="이름 : 박철두"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Email : ham1219@gmail.com"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/affiliation_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="소속 : 부모"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btm_base_green_200"
        android:fontFamily="@font/suit_variable"
        android:text="@string/logout_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_change_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/email_change_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <ImageView
        android:id="@+id/email_change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/right_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/email_change_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email_change_text" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/email_bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/email_change_text" />

    <TextView
        android:id="@+id/name_change_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/name_change_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_bottom_divider" />

    <ImageView
        android:id="@+id/name_change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/right_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/name_change_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_change_text" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/name_change_text" />

</androidx.constraintlayout.widget.ConstraintLayout>